targets/srv0/k3s/homeassistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`ha.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: authelia-with-optional-header-gate
          namespace: base
      services:
        - name: homeassistant-home-assistant
          port: 8080
  tls:
    secretName: homeassistant-prod-tls
